[GitesListe] Correction vertical align

--- a/back/css/style.css
+++ b/back/css/style.css
@@ -517,7 +517,7 @@ body {
     position: relative;
 }
 .listing-b p{
-    padding: 10px 20px 10px 10px;
+    padding: 45px 20px 10px 10px;
 }
 .listing-b{
     vertical-align: middle;
@@ -528,6 +528,7 @@ body {
     position: absolute;
     top: calc(50% - 18px);
     right:0;
+    margin-right: 10px;
 }
 .listing-option a{
     text-decoration: none;
